--- a/frontend/src/Style/index.css
+++ b/frontend/src/Style/index.css
@@ -2,10 +2,26 @@
     margin: 0;
     padding: 0;
     border: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: inherit;
-    vertical-align: baseline;
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Teko", sans-serif;
+}
+
+html {
+    font-size: 16px;
+}
+
+@media screen and (min-width: 320px) {
+    html {
+        font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    html {
+        font-size: 22px;
+    }
 }
 
 a {
